--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,12 @@
 	body {
 		@apply nav:text-body font-sans min-h-screen bg-white;
 	}
+
+	html {
+		transition: background-color 0.3s ease, color 0.3s ease;
+	}
+	
+
 	h1,
 	h2,
 	h3,
